--- a/TODO.txt
+++ b/TODO.txt
@@ -3,9 +3,8 @@ Tareas con prioridad:
 -Conexion de la base de datos de interfaz de pedido usuario (Purchase): (Fabrizio)
 -Interfaz de alta de autor: (Martin)
 -Logica de MainWindow: (Alvaro)
--Agregar event MousePressed a los Header: (Fabrizio)
 -Revisar modality: (Alvaro)
--Logica de interfaz de modificacion de estado de pedido y conexion con Interfa de pedido : (Fabrizio)
+-Asignar estado de un pedido en la base de datos de pedidos, luego de que se modifica: ...
 -Manejo de estado de usuario: (Alvaro)
 -Agregar al carrito (logica): 
 -Agregar accion a la cesta de compra: (Alan)
